--- a/src/styles/scss/media/_media.scss
+++ b/src/styles/scss/media/_media.scss
@@ -168,9 +168,10 @@
 		}
 		&__dots {
 			bottom: -30%;
+			gap: 20px 15px;
 		}
 		&__dot {
-			width: 44px;
+			width: 40px;
 			height: 13px;
 		}
 		&__arrow-left {
